<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWithe"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_main_customer_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_style_clickable_blue"
        android:text="@string/customer"
        android:textAllCaps="false"
        android:textColor="@color/colorWithe"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="ButtonStyle"
        tools:layout_editor_absoluteX="27dp" />

    <Button
        android:id="@+id/btn_main_order_manager_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_style_clickable_blue"
        android:text="@string/order_manager"
        android:textAllCaps="false"
        android:textColor="@color/colorWithe"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_chairman_login"
        tools:ignore="ButtonStyle"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_main_chairman_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_style_clickable_blue"
        android:text="@string/chairman"
        android:textAllCaps="false"
        android:textColor="@color/colorWithe"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_customer_login"
        tools:ignore="ButtonStyle"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="224dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ziri_food"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>