<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".CustomerLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                android:padding="16dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/et_loginCustomer_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="@color/colorWithe" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/et_loginCustomer_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="@color/colorWithe" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:id="@+id/btn_login_customerLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/colorWithe"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>